<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.DetailActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_avatar"
        android:layout_width="116dp"
        android:layout_height="114dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_repositories"
        style="@style/TextContent.bold"
        android:layout_marginTop="8dp"
        android:text="@string/follow_number"
        app:layout_constraintEnd_toEndOf="@+id/repositories"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="@+id/repositories"
        app:layout_constraintTop_toBottomOf="@+id/repositories" />

    <TextView
        android:id="@+id/tv_followers"
        style="@style/TextContent.bold"
        android:layout_marginTop="8dp"
        android:text="@string/follow_number"
        app:layout_constraintEnd_toEndOf="@+id/followers"
        app:layout_constraintStart_toStartOf="@+id/followers"
        app:layout_constraintTop_toBottomOf="@+id/followers" />

    <TextView
        android:id="@+id/tv_username"
        style="@style/TextContent.bold"
        android:layout_marginTop="16dp"
        android:text="@string/username"
        app:layout_constraintStart_toStartOf="@+id/img_avatar"
        app:layout_constraintTop_toBottomOf="@+id/img_avatar" />

    <TextView
        android:id="@+id/tv_name"
        style="@style/TextContent"
        android:text="@string/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/following"
        style="@style/TextContent"
        android:text="@string/following"
        app:layout_constraintBottom_toBottomOf="@+id/img_avatar"
        app:layout_constraintStart_toEndOf="@+id/img_avatar"
        app:layout_constraintTop_toTopOf="@+id/img_avatar"
        app:layout_constraintVertical_bias="0.263" />

    <TextView
        android:id="@+id/followers"
        style="@style/TextContent"
        android:text="@string/followers"
        app:layout_constraintBottom_toBottomOf="@+id/following"
        app:layout_constraintEnd_toStartOf="@+id/repositories"
        app:layout_constraintStart_toEndOf="@+id/following"
        app:layout_constraintTop_toTopOf="@+id/following" />

    <TextView
        android:id="@+id/repositories"
        style="@style/TextContent"
        android:text="@string/repositories"
        app:layout_constraintBottom_toBottomOf="@+id/followers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/followers" />

    <TextView
        android:id="@+id/tv_following"
        style="@style/TextContent.bold"
        android:layout_marginTop="8dp"
        android:text="@string/follow_number"
        app:layout_constraintEnd_toEndOf="@+id/following"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="@+id/following"
        app:layout_constraintTop_toBottomOf="@+id/following" />

    <TextView
        android:id="@+id/tv_location"
        style="@style/TextContent"
        android:text="@string/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

    <TextView
        android:id="@+id/tv_company"
        style="@style/TextContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="16dp"
        android:text="@string/company"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/location"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@drawable/ic_baseline_location_on_24" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/name"
        app:layout_constraintStart_toStartOf="@+id/tv_username"
        app:layout_constraintTop_toBottomOf="@+id/tv_username"
        app:srcCompat="@drawable/ic_baseline_account_circle_24" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/company"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:srcCompat="@drawable/ic_baseline_business_center_24" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_company" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabs" />

    <ProgressBar
        android:id="@+id/progress_bar_detail"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/tabs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/progress_bar_follow"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tabs"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:foregroundGravity="bottom"
        android:visibility="gone"
        app:fabSize="normal"
        app:layout_anchor="@id/view_pager"
        app:layout_anchorGravity="bottom|end"
        app:layout_constraintBottom_toBottomOf="@+id/view_pager"
        app:layout_constraintEnd_toEndOf="@+id/view_pager"
        app:srcCompat="@drawable/ic_baseline_favorite_24" />

</androidx.constraintlayout.widget.ConstraintLayout>